# agent-forge

./: .dockerignore  .env.example  .env.telegram.example  .gitignore  CLAUDE.md  Dockerfile  EXPLORE.md  RUNBOOK.md  agent_forge_debate_club_20260408_164919.md  agent_forge_learning_lab_20260406_124716.md  agent_forge_learning_lab_20260406_130910.md  agent_forge_learning_lab_20260408_120938.md  agent_forge_philosophy_salon_20260331_114720.md  agent_forge_research_lab_20260408_122058.md  build_wonderlab_episode.py  chat_report_20260514_122654.html  chat_report_20260514_122654.md  docker-compose.yml  forge.py  main.py  pyproject.toml  render.yaml  research_report_20260514_110202.html  research_report_20260514_110202.md  run_session.py  session_output.txt  wonderlab_money_episode.json
agent_forge/: __init__.py  agent.py  bus.py  cards.py  claim_ledger.py  claims.py  consensus.py  debate.py  deep.py  docrender.py  engine.py  explorer.py  feed.py  imagery.py  interactive.py  job_state.py  lesson.py  memory.py  model_resolver.py  music.py  narrate.py  narrator.py  photos.py  research.py  sim.py  sources.py  story.py  taste.py  telegram_bot.py  verifier.py  video.py  worker.py
deploy/: .env.worker.example  Dockerfile.worker  LEARNING_FEED.md  README.md  agent-forge-bot.service  fly.toml
docs/: agent-forge-roadmap.md
explorations/: 20260703-who-s-actually-paying-for-your-cash-back.html  20260703-who-s-actually-paying-for-your-cash-back.md  20260707-eighteen-bodies-short.artifact.html  20260707-eighteen-bodies-short.deck.html  20260707-eighteen-bodies-short.html  journal.json  (+18 more)
(+63 files in other folders)
